Fix modal on mobiles

--- a/css/gifts.css
+++ b/css/gifts.css
@@ -190,6 +190,7 @@ dialog::backdrop {
 
 .modal-open {
   overflow: hidden;
+  width: 100%;
 }
 
 @media (width >= 768px) and (width < 1440px ) {
